[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes/Kirkland.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/textures/dungeon_door.png" type="Texture" id=2]
[ext_resource path="res://scripts/GooseDoor.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/EDBWT.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/textures/dungeon.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 192, 96, 64 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 128, 96, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 96, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 96, 64 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 128, 96, 64 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 192, 96, 64 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "close",
"speed": 1.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "open",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 2, 48 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 10, 300 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 512, 10 )

[sub_resource type="Animation" id=13]
resource_name = "FadeToBlack"
tracks/0/type = "bezier"
tracks/0/path = NodePath("Fader/CanvasModulate:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Fader/CanvasModulate:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Fader/CanvasModulate:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Fader/CanvasModulate:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[node name="GameSelect" type="Node2D"]

[node name="GooseDoor" type="AnimatedSprite" parent="."]
position = Vector2( 512, 48 )
scale = Vector2( 1.5, 1.5 )
z_index = -1
frames = SubResource( 9 )
animation = "open"
script = ExtResource( 3 )

[node name="InteractZone" type="Area2D" parent="GooseDoor"]
position = Vector2( 0, 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GooseDoor/InteractZone"]
shape = SubResource( 10 )

[node name="Confirmation" type="RichTextLabel" parent="GooseDoor"]
visible = false
margin_left = -180.0
margin_top = 150.0
margin_right = 332.0
margin_bottom = 225.0
custom_fonts/normal_font = ExtResource( 4 )
text = "Press Spacebar to open the door"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Kirkland" parent="." instance=ExtResource( 1 )]
position = Vector2( 504.029, 305.61 )

[node name="Left Wall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left Wall"]
position = Vector2( -10, 300 )
shape = SubResource( 11 )

[node name="Right Wall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right Wall"]
position = Vector2( 1034, 300 )
shape = SubResource( 11 )

[node name="Top Wall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top Wall"]
position = Vector2( 512, 20 )
shape = SubResource( 12 )

[node name="Bottom Wall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom Wall"]
position = Vector2( 512, 610 )
shape = SubResource( 12 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 512, 312 )
z_index = -10
texture = ExtResource( 5 )

[node name="Fader" type="AnimationPlayer" parent="."]
anims/FadeToBlack = SubResource( 13 )

[node name="CanvasModulate" type="CanvasModulate" parent="Fader"]
color = Color( 0, 0, 0, 1 )
[connection signal="animation_finished" from="GooseDoor" to="GooseDoor" method="_on_GooseDoor_animation_finished"]
[connection signal="body_entered" from="GooseDoor/InteractZone" to="GooseDoor" method="_on_InteractZone_body_entered"]
[connection signal="body_exited" from="GooseDoor/InteractZone" to="GooseDoor" method="_on_InteractZone_body_exited"]
[connection signal="animation_finished" from="Fader" to="GooseDoor" method="_on_FadeToBlack_animation_finished"]
